--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         </button>
       </div>
     </div>
+
+    <!-- add products cards -->
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
