--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Simple E-commerce Website</title>
+<!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="./css/style.css" />
 
-  <!-- Latest compiled and minified CSS -->
+<!-- Bootsrao Cdn -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   
-  <!-- Font Awsome -->  
+<!-- Font Awsome -->  
   <script src="https://kit.fontawesome.com/38f5a946a9.js" crossorigin="anonymous"></script>
   <!-- google Montserrat  font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -84,7 +85,7 @@
             </tbody>
           </table>
           <div class="parces text-center">
-            <button class="btn btn-primary text-center">Buy Now</button>
+            <button class="btn btn-success text-center">Buy Now</button>
           </div>
         </div>
       </div>
